src/test/ui/did_you_mean/recursion_limit_macro.stderr
error: recursion limit reached while expanding the macro `recurse`
  --> $DIR/recursion_limit_macro.rs:10:31
   |
LL |     ($t:tt $($tail:tt)*) => { recurse!($($tail)*) };
   |                               ^^^^^^^^^^^^^^^^^^^
...
LL |     recurse!(0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9);
   |     -------------------------------------------------- in this macro invocation
   |
   = help: consider adding a `#![recursion_limit="20"]` attribute to your crate

error: aborting due to previous error

